--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+name = "Nexus-e - DistIv"
+authors = [{name = "Xuejiao Han", email = "xuhan@eeh.ee.ethz.ch"}]
 dynamic = ["version", "description"]
